# cpp_meet

./: .gitignore  CMakeLists.txt  README.md
cmake/: deps.cmake
docs/: architecture.md  protocol_flow.md  threading_model.md
module01_network_core/: CMakeLists.txt  README.md
module01_network_core/include/net/: io_context.h  ring_buffer.h  udp_socket.h
module01_network_core/src/: io_context.cpp  udp_socket.cpp
module01_network_core/tests/: test_ring_buffer.cpp  test_udp_socket.cpp
module02_rtp_rtcp/: CMakeLists.txt  README.md
module02_rtp_rtcp/include/rtp/: rtcp_packet.h  rtp_jitter_buffer.h  rtp_packet.h
module02_rtp_rtcp/src/: rtcp_packet.cpp  rtp_jitter_buffer.cpp  rtp_packet.cpp
module02_rtp_rtcp/tests/: test_rtcp_packet.cpp  test_rtp_packet.cpp
module03_stun_ice/: CMakeLists.txt  README.md
module03_stun_ice/include/ice/: ice_agent.h  stun_message.h
module03_stun_ice/src/: ice_agent.cpp  stun_message.cpp
module03_stun_ice/tests/: test_stun.cpp
module04_dtls_srtp/: CMakeLists.txt  README.md
module04_dtls_srtp/include/dtls/: dtls_transport.h  srtp_session.h
module04_dtls_srtp/src/: dtls_transport.cpp  srtp_session.cpp
module04_dtls_srtp/tests/: test_dtls.cpp  test_srtp.cpp
module05_signaling/: CMakeLists.txt  README.md
module05_signaling/include/sig/: room_manager.h  sdp.h  websocket_server.h
module05_signaling/src/: room_manager.cpp  sdp.cpp  websocket_server.cpp
module05_signaling/tests/: test_sdp.cpp  test_websocket.cpp
module06_audio/: CMakeLists.txt  README.md
module06_audio/include/audio/: audio_capturer.h  opus_codec.h
module06_audio/src/: audio_capturer.cpp  opus_codec.cpp
module06_audio/tests/: test_opus.cpp
module07_video/: CMakeLists.txt  README.md
module07_video/include/video/: h264_encoder.h  rtp_video_packetizer.h
module07_video/src/: h264_encoder.cpp  rtp_video_packetizer.cpp
module07_video/tests/: test_h264.cpp
module08_weak_network/: CMakeLists.txt  README.md
module08_weak_network/include/weak/: fec.h  gcc_estimator.h  jitter_buffer.h  nack_manager.h
module08_weak_network/src/: fec.cpp  gcc_estimator.cpp  jitter_buffer.cpp  nack_manager.cpp
module08_weak_network/tests/: test_fec.cpp  test_jitter_buffer.cpp  test_nack.cpp
module09_sfu/: CMakeLists.txt  README.md
module09_sfu/include/sfu/: sfu_room.h  sfu_server.h
module09_sfu/src/: sfu_room.cpp  sfu_server.cpp
module09_sfu/tests/: test_sfu_room.cpp
module10_qt_client/: CMakeLists.txt  README.md
module10_qt_client/include/qtclient/: pipeline.h  yuv_renderer.h
module10_qt_client/src/: pipeline.cpp  yuv_renderer.cpp
module10_qt_client/tests/: test_pipeline.cpp
module11_whiteboard/: CMakeLists.txt  README.md
module11_whiteboard/include/wb/: crdt_whiteboard.h
module11_whiteboard/src/: crdt_whiteboard.cpp
module11_whiteboard/tests/: test_crdt.cpp
module12_integration/: CMakeLists.txt  README.md
module12_integration/src/: integration_test_runner.h
module12_integration/tests/: test_integration.cpp
